Fix :focus-visible display for breadcrumbs
The overflow controls were on the `li` element, but the `a` element (the
child) was the thing being navigated to.  This meant that bit of the
:focus-visible that overflowed was being hidden - by doing it all on the
same element, things seem to work better.

--- a/corehq/apps/hqwebapp/static/cloudcare/scss/formplayer-webapp/breadcrumbs.scss
+++ b/corehq/apps/hqwebapp/static/cloudcare/scss/formplayer-webapp/breadcrumbs.scss
@@ -14,11 +14,14 @@
     flex-grow: 1;
 
     .breadcrumb-item {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
       &::before {
         color: $cc-neutral-hi;
+      }
+      a {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
       }
     }
   }
